<resources>
    <string name="app_name">Envelo</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>

    <string name="no_content">No content to display</string>

    <!-- This string should be all lowercase! -->
    <string name="tag_line">budgeting made simple</string>

    <string name="login_failed">Something went wrong during sign in. Some features may be unavailable.</string>
    <string name="login_skip_btn">Skip</string>
    <string name="login_skip_title">Skip sign in</string>
    <string name="login_skip_msg">
        Signing in with Google allows your app data to be backed up to your Google Drive. You can sign in later from the settings menu.\n\nContinue without signing in?
    </string>

    <string name="logout_title">Sign out</string>
    <string name="logout_msg">
        Signing out of Google will disable automatic backups to Google Drive. If you lose data in the future, you may not be able to recover it.\n\nContinue signing out?
    </string>

    <!-- Menu and menu item titles -->
    <string name="menu_funds_title">Funds</string>
    <string name="menu_accounts_title">Accounts</string>
    <string name="menu_envelopes_title">Envelopes</string>
    <string name="menu_vendors_title">Vendors</string>
    <string name="menu_analytics_title">Analytics</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_edit_title">Edit</string>
    <string name="menu_delete_title">Delete</string>
    <string name="menu_transaction_title">Transaction</string>
    <string name="menu_new_transaction_title">New Transaction</string>
    <string name="menu_edit_transaction_title">Edit Transaction</string>
    <string name="menu_new_category_title">New Category</string>
    <string name="menu_edit_category_title">Edit Category</string>
    <string name="menu_new_account_title">New Account</string>
    <string name="menu_edit_account_title">Edit Account</string>
    <string name="menu_new_envelope_title">New Envelope</string>
    <string name="menu_edit_envelope_title">Edit Envelope</string>

    <!-- Settings activity -->
    <string name="settings_category_backup_title">Drive Backups</string>

    <string name="settings_backup">Backup budget data</string>
    <string name="settings_backup_summary">Automatically backup your budget data to Google Drive.</string>

    <string name="settings_sign_in">Sign in with Google</string>
    <string name="settings_sign_in_summary">Sign in with your Google account to enable automatic backups to Google Drive.</string>

    <string name="settings_sign_out">Sign out of Google</string>
    <string name="settings_sign_out_summary">Sign out of your Google account. This will disable Google Drive backups.</string>

    <string name="settings_category_data_title">Application Data</string>

    <string name="settings_export">Export transaction data</string>
    <string name="settings_export_summary">Export transaction data as a .TSV file to be opened in external applications.</string>

    <string name="settings_import">Import budget data</string>
    <string name="settings_import_summary">Import budget data from a previously exported .TSV file.</string>

    <!-- Transaction activity -->
    <string name="transaction_sel_date">Select Date</string>
    <string name="transaction_sel_account">Select Account</string>
    <string name="transaction_sel_envelope">Select Envelope</string>
    <string name="transaction_sel_vendor">Select Vendor</string>

    <string name="transaction_outflow">Outflow</string>
    <string name="transaction_inflow">Inflow</string>
    <string name="transaction_onetime">One-time</string>
    <string name="transaction_recurring">Recurring</string>
    <string name="transaction_notes">Notes</string>

    <!-- Category activity -->
    <string name="category_credit">Credit</string>
    <string name="category_name">Category Name</string>
    <string name="category_account_name">Account Name</string>
    <string name="category_envelope_name">Envelope Name</string>
</resources>