<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="category_backup"
        android:title="@string/settings_category_title">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="backup"
            app:defaultValue="true"
            app:title="@string/settings_backup"
            app:summary="@string/settings_backup_summary" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="sign_in"
            app:title="@string/settings_sign_in"
            app:summary="@string/settings_sign_in_summary" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="sign_out"
            app:title="@string/settings_sign_out"
            app:summary="@string/settings_sign_out_summary" />
    </PreferenceCategory>

</PreferenceScreen>