<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/transactions"
        android:title="@string/menu_transactions_title"
        android:icon="@drawable/ic_money"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/envelopes"
        android:title="@string/menu_envelopes_title"
        android:icon="@drawable/ic_envelope"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/vendors"
        android:title="@string/menu_vendors_title"
        android:icon="@drawable/ic_vendors"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/analytics"
        android:title="@string/menu_analytics_title"
        android:icon="@drawable/ic_analytics"
        app:showAsAction="ifRoom"/>
</menu>